--- a/Config/config/i3/config
+++ b/Config/config/i3/config
@@ -188,7 +188,10 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
+        #status_command i3status
+		mode hide
+    	hidden_state hide
+    	modifier Mod1
 }
 
 #You've been nigled
