--- a/Config/config/i3/config
+++ b/Config/config/i3/config
@@ -62,7 +62,7 @@ bindsym $mod+d exec --no-startup-id dmenu_run
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
 
-bindsym Control+Shift+L exec "i3lock -i afs/i3lock.png"
+bindsym Control+Shift+L exec "i3-msg workspace number 10; alacritty -e cmatrix & sleep 0.2; fullscreen toggle; i3lock"
 
 # change focus
 bindsym $mod+j focus left
