--- a/Config/config/polybar/config.ini
+++ b/Config/config/polybar/config.ini
@@ -18,7 +18,7 @@
 
 [colors]
 ;background = ${xrdb:color0:#222}
-background = #222
+background = #111
 background-alt = #444
 ;foreground = ${xrdb:color7:#222}
 foreground = #dfdfdf
@@ -56,9 +56,9 @@ font-0 = fixed:pixelsize=10;1
 font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 font-2 = siji:pixelsize=10;1
 
-modules-left = bspwm i3
+modules-left = bspwm i3 xworkspaces
 modules-center = 
-modules-right = filesystem xbacklight pulseaudio memory cpu wlan eth battery temperature date powermenu
+modules-right = filesystem xbacklight pulseaudio memory cpu eth battery temperature date powermenu
 
 tray-position = right
 tray-padding = 2
@@ -81,8 +81,8 @@ cursor-scroll = ns-resize
 
 
 [module/xworkspaces]
-
 type = internal/xworkspaces
+format = <label-state>
 
 label-active = %name%
 label-active-background = ${colors.background-alt}
@@ -91,6 +91,7 @@ label-active-padding = 1
 
 label-occupied = %name%
 label-occupied-padding = 1
+
 label-urgent = %name%
 label-urgent-background = ${colors.alert}
 label-urgent-padding = 1
@@ -124,9 +125,7 @@ type = internal/fs
 interval = 25
 
 mount-0 = /
-mount-1 = /home
-mount-2 = /run/media/sami/GAMES
-mount-3 = /run/media/sami/HDD2
+mount-1 = ~/afs/
 
 label-mounted = %{F#0a81f5}%mountpoint%%{F-}: %percentage_used%%
 label-unmounted = %mountpoint% not mounted
