--- a/Config/config/picom/picom.conf
+++ b/Config/config/picom/picom.conf
@@ -148,7 +148,7 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # Sets the radius of rounded window corners. When > 0, the compositor will
 # round the corners of windows. Does not interact well with
 # `transparent-clipping`.
-#corner-radius = 10
+corner-radius = 10
 
 # Exclude conditions for rounded corners.
 rounded-corners-exclude = [
@@ -214,7 +214,7 @@ blur-background-exclude = [
 # `xrender` is the default one.
 #
 # backend = "glx"
-backend = "glx";
+#backend = "glx";
 
 # Enable/disable VSync.
 # vsync = false
