--- a/Config/config/i3/config
+++ b/Config/config/i3/config
@@ -199,5 +199,5 @@ bar {
 bindsym $mod+i exec "i3lock --pointer=default"
 exec_always "i3-sensible-terminal & firefox intra.forge.epita.fr"
 exec_always "~/afs/.confs/pkgs.sh"
-exec_always "while true; do feh --randomize --bg-fill ~/afs/confs/config/wallpapers; sleep 300; done;"
+exec_always "while true; do feh --randomize --bg-fill ~/afs/.confs/config/wallpapers; sleep 300; done;"
 
