--- a/Config/config/polybar/config.ini
+++ b/Config/config/polybar/config.ini
@@ -58,7 +58,7 @@ font-2 = siji:pixelsize=10;1
 
 modules-left = i3 xworkspaces
 modules-center = 
-modules-right = filesystem xbacklight pulseaudio memory cpu eth date powermenu
+modules-right = filesystem xbacklight pulseaudio memory cpu eth date
 
 tray-position = right
 tray-padding = 2
@@ -125,7 +125,6 @@ type = internal/fs
 interval = 25
 
 mount-0 = /
-mount-1 = ~/afs/
 
 label-mounted = %{F#0a81f5}%mountpoint%%{F-}: %percentage_used%%
 label-unmounted = %mountpoint% not mounted
