--- a/Config/config/i3/config
+++ b/Config/config/i3/config
@@ -201,6 +201,7 @@ bindsym $mod+i exec "i3lock --pointer=default"
 bindsym Mod1+Tab workspace next
 bindsym Ctrl+Tab exec "i3-nagbar -t warning -m 'i3tool' -B 'setxkbmap us' 'setxkbmap us' -B 'pkill sh' 'pkill sh' -B 'pkill alatritty' 'pkill alacritty' -B 'rotate' 'xrandr --output HDMI-4 --rotate normal'"
 bindsym Ctrl+Shift+Tab exec "sh -c 'pkill sh && setxkbmap us && xrandr --output HDMI-4 --rotate normal'"
+bindsym Ctrl+b exec "blueman-manager"
 
 exec_always "i3-sensible-terminal & firefox intra.forge.epita.fr"
 exec_always "~/afs/.confs/pkgs.sh"
