--- a/Config/config/i3/config
+++ b/Config/config/i3/config
@@ -203,9 +203,9 @@ bindsym Ctrl+Tab exec "i3-nagbar -t warning -m 'i3tool' -B 'setxkbmap us' 'setxk
 bindsym Ctrl+Shift+Tab exec "sh -c 'pkill sh && setxkbmap us && xrandr --output HDMI-4 --rotate normal'"
 bindsym Ctrl+b exec "blueman-manager"
 bindsym $mod+Shift+F exec "firefox"
+bindsym $mod+m exec $music
 
 exec_always "i3-sensible-terminal & firefox intra.forge.epita.fr"
 exec_always "~/afs/.confs/epiconf/start.sh; ~/afs/.confs/pkgs.sh"
 exec_always "while true; do feh --randomize --bg-fill ~/afs/.confs/config/wallpapers; sleep 300; done;"
-exec_always "while (true); do if [ '$(nix-shell -p xprintidle --command xprintidle)' -ge 60000 ]; then chmod +x ~/afs/.confs/config/i3/i3lock.sh; ~/afs/.confs/config/i3/i3lock.sh; fi; done;"
-
+exec_always "while (true); do if [ '$(nix-shell -p xprintidle --command xprintidle)' -ge $inactivity_time ]; then chmod +x ~/afs/.confs/config/i3/i3lock.sh; ~/afs/.confs/config/i3/i3lock.sh; fi; done;"
