--- a/Config/config/polybar/config.ini
+++ b/Config/config/polybar/config.ini
@@ -124,7 +124,7 @@ label-indicator-underline = ${colors.secondary}
 type = internal/fs
 interval = 25
 
-mount-0 = /
+mount-0 = ~/afs/
 
 label-mounted = %{F#0a81f5}%mountpoint%%{F-}: %percentage_used%%
 label-unmounted = %mountpoint% not mounted
