add afs size to polybar

--- a/Config/config/polybar/config.ini
+++ b/Config/config/polybar/config.ini
@@ -57,8 +57,8 @@ font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 font-2 = siji:pixelsize=10;1
 
 modules-left = i3 xworkspaces
-modules-center = 
-modules-right = filesystem xbacklight pulseaudio memory cpu eth date
+modules-center =
+modules-right = afssize xbacklight pulseaudio memory cpu eth date
 
 tray-position = right
 tray-padding = 2
@@ -120,11 +120,16 @@ label-indicator-margin = 1
 label-indicator-background = ${colors.secondary}
 label-indicator-underline = ${colors.secondary}
 
+[module/afssize]
+type = custom/script
+exec = bash -c 'used=$(du -s ~/afs/ | awk "{print \$1}"); total=$((2*1024*1024)); percent=$((used*100/total)); echo "$percent%"'
+interval = 120
+
 [module/filesystem]
 type = internal/fs
 interval = 25
 
-mount-0 = ~/afs/
+mount-0 = /afs/cri.epita.fr/user/i/il/ilyann.gwinner/u/
 
 label-mounted = %{F#0a81f5}%mountpoint%%{F-}: %percentage_used%%
 label-unmounted = %mountpoint% not mounted
