--- a/Config/config/i3/config
+++ b/Config/config/i3/config
@@ -9,8 +9,7 @@
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
-set $mod Mod4
-include ~/afs/.confs/epiconf/i3_vars.conf
+set $mod ${env:MOD}
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
