--- a/Config/config/i3/config.template
+++ b/Config/config/i3/config.template
@@ -9,7 +9,7 @@
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
-set $mod Mod4
+set $mod __MOD__
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -203,7 +203,7 @@ bindsym Ctrl+Tab exec "i3-nagbar -t warning -m 'i3tool' -B 'setxkbmap us' 'setxk
 bindsym Ctrl+Shift+Tab exec "sh -c 'pkill sh && setxkbmap us && xrandr --output HDMI-4 --rotate normal'"
 bindsym Ctrl+b exec "blueman-manager"
 bindsym $mod+Shift+F exec "firefox"
-bindsym $mod+m exec "spotify"
+bindsym $mod+m exec __MUSIC__
 bindsym Mod1+F4 exec "chmod +x ~/afs/.confs/config/i3/screen.sh; ~/afs/.confs/config/i3/screen.sh"
 bindsym Ctrl+Mod1+r exec "source ~/afs/.confs/epiconf/start.sh"
 
