add afs color in polybar

--- a/Config/config/polybar/config.ini
+++ b/Config/config/polybar/config.ini
@@ -122,7 +122,10 @@ label-indicator-underline = ${colors.secondary}
 
 [module/afssize]
 type = custom/script
+format-prefix = "~/afs/: "
 exec = bash -c 'used=$(du -s ~/afs/ | awk "{print \$1}"); total=$((2*1024*1024)); percent=$((used*100/total)); echo "$percent%"'
+format-prefix-foreground = ${colors.foreground-alt}
+format-underline = #785648
 interval = 120
 
 [module/filesystem]
