add personnalisation of polybar

--- a/Config/config/polybar/config.ini
+++ b/Config/config/polybar/config.ini
@@ -56,9 +56,9 @@ font-0 = fixed:pixelsize=10;1
 font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 font-2 = siji:pixelsize=10;1
 
-modules-left = i3 xworkspaces
-modules-center =
-modules-right = afssize xbacklight pulseaudio memory cpu eth date
+modules-left = ${env:polybar_left}
+modules-center = ${env:Polybar_center}
+modules-right = ${env:polybar_right}
 
 tray-position = right
 tray-padding = 2
@@ -127,6 +127,15 @@ exec = bash -c 'used=$(du -s ~/afs/ | awk "{print \$1}"); total=$((2*1024*1024))
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #785648
 interval = 120
+
+[module/music]
+type = custom/script
+exec = playerctl --player=spotify metadata --format "{{ artist }} - {{ title }}"
+interval = 2
+
+click-left = playerctl --player=spotify play-pause
+click-right = playerctl --player=spotify next
+click-middle = playerctl --player=spotify previous
 
 [module/filesystem]
 type = internal/fs
