--- a/Config/config/i3/config.template
+++ b/Config/config/i3/config.template
@@ -209,5 +209,5 @@ bindsym Ctrl+Mod1+r exec "source ~/afs/.confs/epiconf/start.sh"
 
 exec_always "i3-sensible-terminal & firefox intra.forge.epita.fr"
 exec_always "source ~/afs/.confs/epiconf/start.sh; ~/afs/.confs/pkgs.sh"
-exec_always "while true; do feh --randomize --bg-fill ~/afs/.confs/config/wallpapers; sleep 300; done;"
-exec_always "while (true); do if [ '$(nix-shell -p xprintidle --command xprintidle)' -ge $inactivity_time ]; then chmod +x ~/afs/.confs/config/i3/i3lock.sh; ~/afs/.confs/config/i3/i3lock.sh; fi; done;"
+exec_always "while true; do feh --randomize --bg-fill ~/afs/.confs/config/wallpapers; sleep __WALLPAPER_TIME__; done;"
+exec_always "while (true); do if [ '$(nix-shell -p xprintidle --command xprintidle)' -ge __INACTIVITY_TIME__ ]; then chmod +x ~/afs/.confs/config/i3/i3lock.sh; ~/afs/.confs/config/i3/i3lock.sh; fi; done;"
