--- a/Config/epiconf/config.ini
+++ b/Config/epiconf/config.ini
@@ -1,6 +1,5 @@
 [General]
 MOD=Mod4                ; Keycaps for I3 (Mod4 = Win, Mod1 = Alt)
-OPEN_WINDOWS=enable     ; Open shell and firefox at start
 EPICONF_ASCII=enable    ; Write EPICONF in the top of shell
 INACTIVITY_TIME=60000   ; Time before auto i3lock (in second)
 
@@ -13,3 +12,16 @@ GAMES=disable           ; Activate games commands (lunar, osu)
 [Music]
 MUSIC_LOADER=enable     ; Install Spotify and Deezer
 MUSIC=spotify           ; Main music app (spotify, deezer)
+
+; You can choose which module go on left, right or center
+[Polybar_left]
+xworkspaces=enable      ; Show active and used workspaces
+
+[Polybar_center]
+music=enable            ; Show your musics
+
+[Polybar_right]
+afssize=enable          ; Show the afs size
+memory=enable           ; Show the RAM utilisation
+cpu=enable              ; Show the CPU utilisation
+date=enable             ; Show the date and hour
