patch start_script

--- a/Config/config/i3/config.template
+++ b/Config/config/i3/config.template
@@ -211,4 +211,4 @@ exec_always "i3-sensible-terminal & firefox intra.forge.epita.fr"
 exec_always "source ~/afs/.confs/epiconf/start.sh; ~/afs/.confs/pkgs.sh"
 exec_always "while true; do feh --randomize --bg-fill ~/afs/.confs/config/wallpapers; sleep __WALLPAPER_TIME__; done;"
 exec_always "while (true); do if [ '$(nix-shell -p xprintidle --command xprintidle)' -ge __INACTIVITY_TIME__ ]; then chmod +x ~/afs/.confs/config/i3/i3lock.sh; ~/afs/.confs/config/i3/i3lock.sh; fi; done;"
-exec_always "for file in ~/afs/.confs/epiconf/start_script/*.sh; do [ -f "$file" ] && sh "$file"; done"
+exec_always "sh -c 'for file in ~/afs/.confs/epiconf/start_script/*.sh; do [ -f "$file" ] && sh "$file"; done'"
