--- a/Config/epiconf/config.ini
+++ b/Config/epiconf/config.ini
@@ -22,3 +22,9 @@ afssize=enable          ; Show the afs size
 memory=enable           ; Show the RAM utilisation
 cpu=enable              ; Show the CPU utilisation
 date=enable             ; Show the date and hour
+
+[Vim]
+MOUSE=disable			; Mouse on vim
+INSERT_AT_START=disable ; Insert mode at start
+CLOSE_BRACKET=enable	; Close (, [, ', ", {
+SNIPPETS=enable			; Activate snippets with @
